--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,6 @@
             </td>
             <td class="right-column">
                 <nav class="header-nav">
-                    <div class="logo">Patryk Zadroga</div>
                     <div class="menu">
                         {% block nav_menu %}
                         <a href="#index.html">Strona główna</a>
@@ -35,17 +34,27 @@
         <tr>
             <td class="left-column">
                 <div class="sidebar">
+                    <div class="contact-personal">
+                        <h1>Patryk Zadroga</h1>
+                        <h3 style="margin-bottom: 20px;">Automation Engineer</h3>
+                    </div>
                     <div class="contact-info">
-                        <h2>Patryk Zadroga</h2>
-                        <p>Automation Engineer</p>
-                        <p>Email: contact@example.com</p>
-                        <p>Phone: +48 XXX XXX XXX</p>
-                        <p>Location: Poland</p>
+                        <p style="display: flex; align-items: left;"><img src="{{ url_for('static', filename='email.png') }}" alt="Email" class="contact-icon">ZadrogaPatryk18@gmail.com</p>
+                        <p style="display: flex; align-items: left;"><img src="{{ url_for('static', filename='phone.png') }}" alt="Phone" class="contact-icon">+48 516 152 644</p>
+                        <p style="display: flex; align-items: left;"><img src="{{ url_for('static', filename='github.png') }}" alt="Phone" class="contact-icon">github.com/pempek18</p>
+                        <p style="display: flex; align-items: left;"><img src="{{ url_for('static', filename='location.png') }}" alt="Location" class="contact-icon">Location: Poland</p>
+                    </div>
+                    <div class="left-column-content">
+                        {% block left_column_content %}{% endblock %}
                     </div>
                 </div>
             </td>
-            <td class="right-column">
-                {% block content %}{% endblock %}
+            <td class="right-column-content">
+                <main class="main-container">
+                    <div class="main-description">
+                        {% block content %}{% endblock %}
+                    </div>
+                </main>
             </td>
         </tr>
     </table>
