--- a/templates/index.html
+++ b/templates/index.html
@@ -10,22 +10,18 @@
 {% endblock %}
 
 {% block content %}
-<main class="main-container">
-    <div class="main-description">
-        <h1>Projekty i doświadczenie.</h1>
-        <p>Jestem programistą, który lubi tworzyć nowe rzeczy i rozwiązać problemy.</p>
-        <p>Pracuję w przemyśle od 2018 roku.</p>
-        <p>Przez lata nabrałem doświadczenia w wielu branżach, takich jak:</p>
-        <p>
-        <ul class="text-list">
-            <li>Atomizacja materiałów, atomizery</li>
-            <li>Automatyczne magazyny</li>
-            <li>Wytłaczarki, butelczarki PP i PE</li>
-            <li>Obóbka stali, wierarki automatyczne, zgrzewarki</li>
-        </ul>
-        </p>
-        <p>Od zawsze interesują mnie ciakawostki programistyczne i nowe technologie, dlatego w swoich aplikacjach miałem szanse wykorzystywać modele analizujące obraz czy modele językowe.</p>
-        <p>Pracuję korzystając z benefitów systemów PLC oraz technologi IT. Co pozwala mi szukać optymalizacji rozwiązań i koszyów w trudnych aplikacjach.</p>
-    </div>
-</main>
+<h1>Projekty i doświadczenie.</h1>
+<p>Jestem programistą, który lubi tworzyć nowe rzeczy i rozwiązać problemy.</p>
+<p>Pracuję w przemyśle od 2018 roku.</p>
+<p>Przez lata nabrałem doświadczenia w wielu branżach, takich jak:</p>
+<p>
+<ul class="text-list">
+    <li>Atomizacja materiałów, atomizery</li>
+    <li>Automatyczne magazyny</li>
+    <li>Wytłaczarki, butelczarki PP i PE</li>
+    <li>Obóbka stali, wierarki automatyczne, zgrzewarki</li>
+</ul>
+</p>
+<p>Od zawsze interesują mnie ciakawostki programistyczne i nowe technologie, dlatego w swoich aplikacjach miałem szanse wykorzystywać modele analizujące obraz czy modele językowe.</p>
+<p>Pracuję korzystając z benefitów systemów PLC oraz technologi IT. Co pozwala mi szukać optymalizacji rozwiązań i kosztów w trudnych aplikacjach.</p>
 {% endblock %} 
