--- a/templates/experience.html
+++ b/templates/experience.html
@@ -97,7 +97,9 @@
     <div class="experience-card">
         <div class="experience-header">
             <h3>Automation Engineer</h3>
-            <p>Amazemet https://www.amazemet.com/</p>
+            <p>Amazemet</p> 
+            <a href="https://www.amazemet.com/" target="_blank">https://www.amazemet.com/</a>
+            <br>
             <span>02.2023- Present</span>
         </div>
         <ul>
@@ -121,6 +123,8 @@
         <div class="experience-header">
             <h3>PLC Programmer</h3>
             <p>SII Sp. z o.o. / al. Niepodległości 69, 02-626 Warszawa</p>
+            <a href="https://sii.pl/" target="_blank">https://sii.pl/</a>
+            <br>
             <span>09.2022 - 01.2023</span>
         </div>
         <ul>
@@ -132,6 +136,8 @@
         <div class="experience-header">
             <h3>Automation Engineer</h3>
             <p>Graham Packaging Poland Sp. z o.o. / Żegańska 1</p>
+            <a href="http://www.centrumtechnologiczne.pl" target="_blank">http://www.centrumtechnologiczne.pl</a>
+            <br>
             <span>07.2018 – 09.2022</span>
         </div>
         <ul>
@@ -151,6 +157,8 @@
         <div class="experience-header">
             <h3>Automation Engineer</h3>
             <p>Therm-Trade / Nowa Wieś Warszawska</p>
+            <a href="https://mrfpolska.pl/" target="_blank">https://mrfpolska.pl/</a>
+            <br>
             <span>10.2017 – 07.2018</span>
         </div>
         <ul>
@@ -163,6 +171,8 @@
         <div class="experience-header">
             <h3>Maintenance Automation Engineer</h3>
             <p>ZPM Mlekpol oddział w Mrągowie / Mrągowo</p>
+            <a href="https://mlekpol.com.pl/index.php/o-firmie/nasze-zaklady/zpm-mragowo/" target="_blank">https://mlekpol.com.pl/index.php/o-firmie/nasze-zaklady/zpm-mragowo/</a>
+            <br>
             <span>08.2016 – 09.2017</span>
         </div>
         <ul>
@@ -173,6 +183,8 @@
     <div class="experience-card">
         <div class="experience-header">
             <p>Github Community</p>
+            <a href="https://github.com/pempek18" target="_blank">https://github.com/pempek18</a>
+            <br>
             <span>11.2021 – present</span>
         </div>
         <ul>
