--- a/templates/production.html
+++ b/templates/production.html
@@ -14,25 +14,29 @@
 
 <div class="projects-grid">
     <div class="project-card">
-        <img src="images/projekt1.jpg" alt="Automatyczny Atomizer ultradzwiękowy">
-        <h3>Automatyczny Atomizer ultradzwiękowy</h3>
-        <p>System zarządzania magazynem z wykorzystaniem robotów transportowych</p>
+        <img src="static/rePowder.png" alt="Automatyczny Atomizer ultradzwiękowy rePowder">
+        <h3>Automatyczny Atomizer ultradzwiękowy rePowder</h3>
+        <p>Wdrożenie sterowania atomizera ultradzwiękowego bazującego na PLC Beckhoff</p>
     </div>
-
     <div class="project-card">
-        <img src="images/projekt2.jpg" alt="Automatyczny linie pakujące">
-        <h3>Automatyczny linie pakujące</h3>
-        <p>Zautomatyzowany system kontroli procesu atomizacji materiałów</p>
+        <img src="static/inFurner.png" alt="Piec próżniowy inFurner">
+        <h3>Piec próżniowy inFurner</h3>
+        <p>Piec próżniowy do wypiekania materiałów</p>
+    </div>
+    <div class="project-card">
+        <img src="static/manipulator_xyz.png" alt="Manipulator XYZ">
+        <h3>Manipulator XYZ</h3>
+        <p>Manipulator do sterowania palnikiem plazmowym z użyciem kontrlera xbox</p>
     </div>
 
     <div class="project-card">
         <img src="images/projekt3.jpg" alt="Indexer do butelek">
-        <h3>Indexer do butelek</h3>
-        <p>Kompleksowy system sterowania linią do wytłaczania butelek</p>
+        <h3>Zgrzewarka wielopunktowa do paneli ogrodzeniowych</h3>
+        <p>Modyfikacja sterowania zgrzewarki wielopunktowej</p>
     </div>
 
     <div class="project-card">
-        <img src="images/projekt4.jpg" alt="Tester szczelności">
+        <img src="static/tornado.png" alt="Tester szczelności">
         <h3>Tester szczelności</h3>
         <p>Zautomatyzowany system do testowania szczelności butelek</p>
     </div>
