--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -15,33 +15,47 @@
 
 <div class="projects-grid">
     <div class="project-card">
-        <img src="images/plc.jpg" alt="PLC">
+        <img src="static/beckhoff.png" alt="beckhoff" style="width: 100%; height: auto; padding: 30px; padding-bottom: 30px;">
+        <img src="static/gx_works.png" alt="gx_works" style="width: 100%; height: auto;">
         <h3>PLC</h3>
         <p>Programowanie sterowników logicznych i systemów automatyki przemysłowej</p>
     </div>
-
     <div class="project-card">
-        <img src="images/vision.jpg" alt="Vision">
+        <img src="static/weintek.png" alt="PLC" style="width: 100%; height: auto;">
+        <img src="static/indusoft.png" alt="PLC" style="width: 100%; height: auto;">
+        <h3>HMI</h3>
+        <p>Programowanie interfejsów użytkowych</p>
+    </div>
+    <div class="project-card">
+        <img src="static/ultralytics.png" alt="Vision">
         <h3>Vision</h3>
         <p>Systemy wizyjne i przetwarzanie obrazu w zastosowaniach przemysłowych</p>
     </div>
-
     <div class="project-card">
-        <img src="images/ml.jpg" alt="Machine Learning">
+        <img src="static/pyTorch.png" alt="Machine Learning">
+        <img src="static/python.png" alt="Machine Learning">
         <h3>Machine Learning</h3>
         <p>Implementacja algorytmów uczenia maszynowego w procesach przemysłowych</p>
     </div>
-
     <div class="project-card">
-        <img src="images/llm.jpg" alt="LLM">
+        <img src="static/llama.jpeg" alt="LLM">
         <h3>Large Language Models</h3>
         <p>Wykorzystanie modeli językowych w automatyzacji i optymalizacji procesów</p>
     </div>
-    
     <div class="project-card">
-        <img src="images/desktop.jpg" alt="Aplikacje desktopowe">
+        <img src="static/csharp.png" alt="Embeded Systems">
         <h3>Aplikacje desktopowe</h3>
         <p>Tworzenie dedykowanych aplikacji desktopowych dla przemysłu</p>
     </div>
+    <div class="project-card">
+        <img src="static/kuka.png" alt="kuka" style="width: 100%; height: auto; padding: 30px; padding-bottom: 30px;">
+        <h3>Robotics</h3>
+        <p>Programowanie robotów przemysłowych i automatyzacja manipulacji</p>
+    </div>    
+    <div class="project-card">
+        <img src="static/cplusplus.png" alt="Aplikacje desktopowe">
+        <h3>Embeded Systems</h3>
+        <p>Programowanie systemów wbudowanych i mikrokontrolerów</p>
+    </div>    
 </div>
 {% endblock %} 
