--- a/static/styles.css
+++ b/static/styles.css
@@ -46,16 +46,17 @@ nav {
 
 .menu a {
     text-decoration: none;
-    color: var(--primary-color);
+    color: white;
     font-weight: 500;
     transition: color 0.3s ease;
-    background-color: grey;
+    background-color: var(--cv-grey);
     border-radius: 10px;
     padding: 5px 10px;
+    font-size: 1.5rem;
 }
 
 .menu a:hover {
-    color: var(--accent-color);
+    color: var(--cv-yellow);
     background-color: white;
     border-radius: 10px;
     padding: 5px 10px;
@@ -228,6 +229,10 @@ td {
     color: white;
     padding-left: 20px;
 }
+.contact-info a {
+    color: white;
+    text-decoration: none;
+}
 .contact-icon {
     width: 20px;
     height: 20px;
@@ -293,6 +298,11 @@ td {
 .experience-header span {
     color: #AAAAAA;
     font-size: 0.8rem;
+    font-weight: bold;
+}
+.experience-header a {
+    color: rgb(86, 75, 75);
+    font-size: 1rem;
     font-weight: bold;
 }
 .experience-card {
