--- a/templates/production.html
+++ b/templates/production.html
@@ -14,37 +14,61 @@
 
 <div class="projects-grid">
     <div class="project-card">
-        <img src="static/rePowder.png" alt="Automatyczny Atomizer ultradzwiękowy rePowder">
+        <img src="static/img/rePowder.png" alt="Automatyczny Atomizer ultradzwiękowy rePowder">
         <h3>Automatyczny Atomizer ultradzwiękowy rePowder</h3>
-        <p>Wdrożenie sterowania atomizera ultradzwiękowego bazującego na PLC Beckhoff</p>
+        <ul>
+            <li>Translacja kodu C++ na framework Arduino i platformie Controlino na sterownik Beckhoff IEC 1131-3 Język ST (ang. Structural Text)</li>
+            <li>Wykonanie projektu HMI Weintek według nowego designu</li>
+            <li>Automatyzacja urządzenia z wykorzystaniem modeli analizy obrazu i dużych modeli językowych</li>
+            <li>Prowadzenie projektu automatyzacji urządzenia</li>
+        </ul>
     </div>
     <div class="project-card">
-        <img src="static/inFurner.png" alt="Piec próżniowy inFurner">
+        <img src="static/img/inFurner.png" alt="Piec próżniowy inFurner">
         <h3>Piec próżniowy inFurner</h3>
-        <p>Piec próżniowy do wypiekania materiałów</p>
+        <ul>
+            <li>Translacja kodu C++ na framework Arduino i platformie Controlino na sterownik Beckhoff IEC 1131-3 Język ST (ang. Structural Text)</li>
+            <li>Rozwinięcie funkcjonalności pieca próżniowego</li>
+            <li>Testy i prowadzenie projektu oprogramowania pieca do wdrożenia u klienta</li>
+        </ul>
     </div>
     <div class="project-card">
-        <img src="static/manipulator_xyz.png" alt="Manipulator XYZ">
+        <img src="static/img/manipulator_xyz.png" alt="Manipulator XYZ">
         <h3>Manipulator XYZ</h3>
-        <p>Manipulator do sterowania palnikiem plazmowym z użyciem kontrlera xbox</p>
+        <ul>
+            <li>Pomysł i prowadzenie projektu manipulatora XYZ</li>
+            <li>Sterowanie manipulatora z wykorzystaniem kontrolera xbox</li>
+            <li>Specyfikacja komponentów automatyki i elektrycznych</li>
+            <li>Optymalizacja kosztów poprzez pisanie bibliotek ruchu interpolowanego</li>
+            <li>Realizacja elementów automatyzacji manipulatora jak powtarzanie sekwencji punktów, realizacja ruchu po zadanym okręgu</li>
+        </ul>
     </div>
 
     <div class="project-card">
-        <img src="images/projekt3.jpg" alt="Indexer do butelek">
+        <img src="static/img/zgrzewarka.jpeg" alt="Zgrzewarka wielopunktowa do paneli ogrodzeniowych">
         <h3>Zgrzewarka wielopunktowa do paneli ogrodzeniowych</h3>
-        <p>Modyfikacja sterowania zgrzewarki wielopunktowej</p>
+        <p>Wymiana sterowania zgrzewarki wielopunktowej i napisanie oprogramowania na sterowniku Mitsubishi FX5U na podstawie grafu blokowego</p>
     </div>
 
     <div class="project-card">
-        <img src="static/tornado.png" alt="Tester szczelności">
+        <img src="static/img/tornado.png" alt="Tester szczelności">
         <h3>Tester szczelności</h3>
-        <p>Zautomatyzowany system do testowania szczelności butelek</p>
+        <ul>
+            <li>Rozwijanie oprogramowania testera szczelności</li>
+            <li>Funkcja wykrywania kolizji na podstawie momentu obrotowego</li>
+            <li>Przygotowanie skryptu automatyzującego kwalifikację testera FAT na podstawie wyników testów</li>
+        </ul>
     </div>
     
     <div class="project-card">
-        <img src="images/projekt5.jpg" alt="Wytłaczarka do butelek PP">
-        <h3>Wytłaczarka do butelek PP</h3>
-        <p>Zautomatyzowana linia do wytłaczania butelek PP</p>
+        <img src="static/img/mega.jpg" alt="Wytłaczarka do butelek PP" style="width: 60%; height: auto;">
+        <h3>Wytłaczarka do butelek PP Graham VR</h3>
+        <ul>
+            <li>Utrzymanie i rozwijanie oprogramowania wytłaczarki do butelek PP Graham VR</li>
+            <li>Rozwijanie funkcjonalności lini odbioru butelek opartej na serwach indeksujących butelki</li>
+            <li>Wymiany sterowania Butelczarek z sterowania Moeller na Beckhoff</li>
+        </ul>
+    </div>
     </div>
     
 </div>
