--- a/templates/services.html
+++ b/templates/services.html
@@ -14,37 +14,37 @@
 
 <div class="projects-grid">
     <div class="project-card">
-        <img src="images/modernizacja.jpg" alt="Modernizacja Maszyn">
+        <img src="static/img/modernizacja.png" alt="Modernizacja Maszyn" style="width: 100%; height: auto;">
         <h3>Modernizacja Maszyn</h3>
         <p>Kompleksowa modernizacja i automatyzacja istniejących maszyn przemysłowych</p>
     </div>
 
     <div class="project-card">
-        <img src="images/wsparcie.jpg" alt="Wsparcie w przemyśle">
+        <img src="static/img/wsparcie.png" alt="Wsparcie w przemyśle" style="width: 100%; height: auto;">
         <h3>Wsparcie w przemyśle</h3>
         <p>Profesjonalne wsparcie techniczne i konsultacje w zakresie automatyzacji przemysłowej</p>
     </div>
 
     <div class="project-card">
-        <img src="images/aplikacje.jpg" alt="Aplikacje Dla firm">
+        <img src="static/img/aplikacje.png" alt="Aplikacje Dla firm" style="width: 100%; height: auto;">
         <h3>Aplikacje Dla firm</h3>
         <p>Tworzenie dedykowanych aplikacji przemysłowych i systemów sterowania</p>
     </div>
 
     <div class="project-card">
-        <img src="images/produkcja.jpg" alt="Produkcja maszyn">
+        <img src="static/img/produkcja.png" alt="Produkcja maszyn" style="width: 100%; height: auto;">
         <h3>Produkcja maszyn</h3>
         <p>Projektowanie i produkcja zautomatyzowanych maszyn na zamówienie</p>
     </div>
 
     <div class="project-card">
-        <img src="images/lakiernia.jpg" alt="Lakiernia">
+        <img src="static/img/lakiernia.png" alt="Lakiernia" style="width: 100%; height: auto;">
         <h3>Lakiernia</h3>
         <p>Automatyzacja procesów lakierniczych i systemów malowania przemysłowego</p>
     </div>
 
     <div class="project-card">
-        <img src="images/konstrukcja.jpg" alt="Konstrukcja">
+        <img src="static/img/solidworks.png" alt="Konstrukcja" style="width: 100%; height: auto;">
         <h3>Konstrukcja</h3>
         <p>Projektowanie i wykonawstwo konstrukcji mechanicznych oraz systemów automatyki</p>
     </div>
