--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -15,47 +15,89 @@
 
 <div class="projects-grid">
     <div class="project-card">
-        <img src="static/beckhoff.png" alt="beckhoff" style="width: 100%; height: auto; padding: 30px; padding-bottom: 30px;">
-        <img src="static/gx_works.png" alt="gx_works" style="width: 100%; height: auto;">
+        <img src="static/img/beckhoff.png" alt="beckhoff" style="width: 100%; height: auto; padding: 30px; padding-bottom: 30px;">
+        <img src="static/img/gx_works.png" alt="gx_works" style="width: 80%; height: auto;">
         <h3>PLC</h3>
-        <p>Programowanie sterowników logicznych i systemów automatyki przemysłowej</p>
+        <ul>
+            <li>6 lat doświadczenia w różnych branżach i różnych typach sterowników</li>
+            <li>Beckhoff</li>
+            <li>Mitsubishi</li>
+            <li>Fatek</li>
+        </ul>
     </div>
     <div class="project-card">
-        <img src="static/weintek.png" alt="PLC" style="width: 100%; height: auto;">
-        <img src="static/indusoft.png" alt="PLC" style="width: 100%; height: auto;">
+        <div>
+            <img src="static/img/weintek.png" alt="PLC" style="width: 48%; height: auto;">
+            <img src="static/img/indusoft.png" alt="PLC" style="width: 48%; height: auto;">
+        </div>
         <h3>HMI</h3>
-        <p>Programowanie interfejsów użytkowych</p>
+        <ul>
+            <li>Tradycyjne HMi</li>
+            <li>Scada</li>
+            <li>lokalne aplikacje desktopowe pracujące jako HMI</li>
+        </ul>
     </div>
     <div class="project-card">
-        <img src="static/ultralytics.png" alt="Vision">
+        <img src="static/img/ultralytics.png" alt="Vision">
         <h3>Vision</h3>
-        <p>Systemy wizyjne i przetwarzanie obrazu w zastosowaniach przemysłowych</p>
+        <ul>
+            <li>Systemy wizyjne i przetwarzanie obrazu w zastosowaniach przemysłowych</li>
+            <li>Ultralytics</li>
+            <li>Yolov8</li>
+            <li>Postprocessing rezultatów detekcji i segmentacji dla zastosowań przemysłowych</li>
+            <li>Kontrola trudnych procesów jak np. spawanie plazmowe, spawanie lasermi, spawanie TIG</li>
+        </ul>
     </div>
     <div class="project-card">
-        <img src="static/pyTorch.png" alt="Machine Learning">
-        <img src="static/python.png" alt="Machine Learning">
+        <img src="static/img/pyTorch.png" alt="Machine Learning">
+        <img src="static/img/python.png" alt="Machine Learning">
         <h3>Machine Learning</h3>
-        <p>Implementacja algorytmów uczenia maszynowego w procesach przemysłowych</p>
+        <ul>
+            <li>Implementacja modelu LSTM do przerwidywania zużycia przetworników ultradzwiękowych</li>
+            <li>Analiza dużych zbiorów danych w celu wykrycia prawidłowości w trudnych procesach</li>
+            <li>Przygotowywanie raportów bazujących na dużych zbiorach danych</li>
+        </ul>
     </div>
     <div class="project-card">
-        <img src="static/llama.jpeg" alt="LLM">
+        <img src="static/img/llama.jpeg" alt="LLM">
         <h3>Large Language Models</h3>
-        <p>Wykorzystanie modeli językowych w automatyzacji i optymalizacji procesów</p>
+        <ul>
+            <li>Wykorzystanie modeli językowych w automatyzacji i optymalizacji procesów</li>
+            <li>Przyuczanie lokalnych LLM do funkcji Asystent operatora</li>
+            <li>Przyuczanie LLM do rozpatrywania złożonych danych w długim kontekście czasowym</li>
+        </ul>
     </div>
     <div class="project-card">
-        <img src="static/csharp.png" alt="Embeded Systems">
+        <img src="static/img/csharp.png" alt="Embeded Systems">
         <h3>Aplikacje desktopowe</h3>
-        <p>Tworzenie dedykowanych aplikacji desktopowych dla przemysłu</p>
+        <ul>
+            <li>Tworzenie dedykowanych aplikacji desktopowych dla przemysłu</li>
+            <li>korzystanie z C#, WPF, .net maui dla realizacji aplikacji desktopowych</li>
+            <li>HMI dla sterowników PLC z wykorzystaniem nowoczesnych technologii</li>
+        </ul>
     </div>
     <div class="project-card">
-        <img src="static/kuka.png" alt="kuka" style="width: 100%; height: auto; padding: 30px; padding-bottom: 30px;">
+        <img src="static/img/kuka.png" alt="kuka" style="width: 100%; height: auto; padding: 30px; padding-bottom: 30px;">
         <h3>Robotics</h3>
-        <p>Programowanie robotów przemysłowych i automatyzacja manipulacji</p>
+        <ul>
+            <li>Programowanie robotów przemysłowych i automatyzacja manipulacji</li>
+            <li>Pierwsze uruchomienia robotów KUKA</li>
+            <li>integracja safety i sterowania robotów z systemami PLC</li>
+        </ul>
     </div>    
     <div class="project-card">
-        <img src="static/cplusplus.png" alt="Aplikacje desktopowe">
-        <h3>Embeded Systems</h3>
-        <p>Programowanie systemów wbudowanych i mikrokontrolerów</p>
+        <img src="static/img/cplusplus.png" alt="Aplikacje desktopowe">
+        <h3>Systemy wbudowane</h3>
+        <ul>
+            <li>Programowanie systemów wbudowanych i mikrokontrolerów</li>
+            <li>Programowanie w C/C++</li>
+            <li>Realizacje budżetowych rozwiązań na mikrokontrolerach</li>
+        </ul>
     </div>    
+    <div class="project-card">
+        <img src="static/img/docker.png" alt="Aplikacje desktopowe">
+        <h3>Dockeryzacja aplikacji</h3>
+        <p>Dockeryzacja aplikacji w celu zwiększenia elastyczności i skalowalności</p>
+    </div>       
 </div>
 {% endblock %} 
